# Vadose

./: LICENSE  pyproject.toml  smoke_test.py  smoke_test_observation_points.py  smoke_test_pumping_schedules.py  smoke_test_recharge_simple.py  smoke_test_transient_qt.py  smoke_test_transient_recharge.py
backend/core/: aquifer_model.py  boundaries.py  grid.py  layers.py  parameters.py  properties.py  well.py  wells.py
backend/models/: transient_model.py
backend/solvers/: steady_state.py
backend/solvers/steady_state/: assemble_matrix.py  interface.py  solver_direct.py  solver_iterative.py
backend/solvers/transient/: __init__.py  bc_factory.py  budget.py  matrix_assembly.py  observations.py  pumping_schedule.py  recharge_schedule.py  solver_logs.py  source_sink.py  storage.py  time_stepper.py  transient_solver.py
backend/solvers/transient/boundary_conditions/: __init__.py  dirichlet.py  flux_bc.py  general_head.py  neumann.py  recharge.py  river.py  theis_dirichlet.py
backend/tests/: conftest.py  test_grid_properties.py  test_steady_state_solver.py  test_transient_solver.py  test_validation_theis.py
backend/tests/regression/: helpers.py  test_asymmetric_bc.py  test_dt_convergence.py  test_grid_anisotropy.py  test_mass_balance.py  test_multiwell_symmetry.py  test_river_bc.py  test_steady_dirichlet.py  test_uniform_recharge.py
backend/time_steppers/: backward_euler.py
backend/utils/: logging.py
backend/validation/: theis.py
backend/visualization/: animate_1d.py  plot_contours.py  plot_profiles.py
vadose.egg-info/: PKG-INFO  SOURCES.txt
